@@ -1,3 +1,8 @@
+2008-06-06  Matthew Barnes  <mbarnes@redhat.com>
+
+	** Allow evolution-exchange to build with G_DISABLE_SINGLE_INCLUDES
+	   and GTK_DISABLE_SINGLE_INCLUDES defined.  (#536638)
+
 2008-06-04  Wang Xin  <jedy.wang@sun.com>
 
 	Fixes #536376
